# SetsCalc

./: CMakeLists.txt  README.md  doxygen_config
scalc/: CMakeLists.txt  main.cpp
scalc_lib/: CMakeLists.txt  Expression.cpp  Expression.hpp  File.cpp  File.hpp  Operation.cpp  Operation.hpp  Parser.cpp  Parser.hpp  Set.cpp  Set.hpp
test/: CMakeLists.txt  CalcTest.cpp  OperationTest.cpp  ParserTest.cpp
test/test_data/: file1.txt  file2.txt  file3.txt
